Fixed Reordering Terminals Crashes The Game.